@@ -15,11 +15,13 @@ add_stopwords(<DATA>);
 all_pod_files_spelling_ok();
 
 __DATA__
+API
 bot's
 IRC
 irc
 Marc
 Mims
+timeline
 un
 unfollow
 username
