@@ -1,4 +1,5 @@
 0.02_5
+    - Renamed twitirc.pl to twirc
     - Added check_replies and @replies merging
     - Use useragent_class in Net::Twitter 1.22
     - Added echo_posts option, defaults to 0
